Add ng-bootstrap alert sample

--- a/src/app/forms/personal-and-contact-info-form/representative-info-form/representative-info-form.component.html
+++ b/src/app/forms/personal-and-contact-info-form/representative-info-form/representative-info-form.component.html
@@ -51,3 +51,11 @@
     }
   </fieldset>
 }
+
+<ngb-alert [dismissible]="false">
+  <h6>Will you be someone else be helping the injured worker with their claim?</h6>
+  <span>
+    If the injured worker would like to add you or someone else as a representative to help manage
+    their claim, please have them fill out and sign our <a href="#">authorization</a> form.
+  </span>
+</ngb-alert>
