--- a/src/app/forms/personal-and-contact-info-form/personal-info-form/personal-info-form.component.html
+++ b/src/app/forms/personal-and-contact-info-form/personal-info-form/personal-info-form.component.html
@@ -12,7 +12,7 @@
         class="btn-check"
         name="has-received-claim-number"
         id="has-received-claim-number-yes"
-        [(ngModel)]="hasClaimNumber"
+        [ngrxFormControlState]="form.controls.hasClaimNumber"
         [value]="true"
       />
       <label class="btn btn-outline-primary" for="has-received-claim-number-yes">Yes</label>
@@ -21,14 +21,14 @@
         class="btn-check"
         name="has-received-claim-number"
         id="has-received-claim-number-no"
-        [(ngModel)]="hasClaimNumber"
+        [ngrxFormControlState]="form.controls.hasClaimNumber"
         [value]="false"
       />
       <label class="btn btn-outline-primary" for="has-received-claim-number-no">No</label>
     </div>
   </fieldset>
 
-  @if (hasClaimNumber) {
+  @if (!!form.value.hasClaimNumber) {
     <fieldset>
       <legend class="fs-6 fw-bold">WorkSafeBC claim number</legend>
       <input
@@ -39,4 +39,9 @@
       />
     </fieldset>
   }
+
+  <fieldset>
+    <legend class="fs-6 fw-bold">Date of birth</legend>
+    <ngb-datepicker #dp />
+  </fieldset>
 }
