Add ng-bootstrap datepicker sample

--- a/src/app/forms/personal-and-contact-info-form/personal-info-form/personal-info-form.component.html
+++ b/src/app/forms/personal-and-contact-info-form/personal-info-form/personal-info-form.component.html
@@ -42,6 +42,6 @@
 
   <fieldset>
     <legend class="fs-6 fw-bold">Date of birth</legend>
-    <ngb-datepicker #dp />
+    <ngb-datepicker #dp (dateSelect)="setDateOfBirth($event)" />
   </fieldset>
 }
