--- a/src/app/form-summary/form-summary.component.html
+++ b/src/app/form-summary/form-summary.component.html
@@ -1,22 +1,18 @@
-@let form = form$ | ngrxPush;
-
 <h3>Review and submit</h3>
 
 <h4>Your report details</h4>
 <p>Please review the information you've entered and, if it is correct, click Submit below.</p>
 
-@if (form) {
-  <table class="table table-sm">
-    <thead>
-      <tr>
-        <th scope="col" colspan="4"><h4>Your contact information</h4></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row" class="w-25">Legal first name</th>
-        <td class="w-75">{{ form.personalAndContactInfo.representativeInfo.firstName }}</td>
-      </tr>
-    </tbody>
-  </table>
-}
+<table *ngrxLet="form$ as form" class="table table-sm">
+  <thead>
+    <tr>
+      <th scope="col" colspan="4"><h4>Your contact information</h4></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row" class="w-25">Legal first name</th>
+      <td class="w-75">{{ form.personalAndContactInfo.representativeInformation}}</td>
+    </tr>
+  </tbody>
+</table>
