Fix conditional validation logic

--- a/src/app/forms/personal-and-contact-info-form/personal-and-contact-info-form.component.html
+++ b/src/app/forms/personal-and-contact-info-form/personal-and-contact-info-form.component.html
@@ -31,7 +31,7 @@
     </div>
   </fieldset>
 
-  @if (form.value.representativeInformation.reportingForSelf) {
+  @if (!(form.value.representativeInformation.reportingForSelf ?? true)) {
     <representative-info-form
       [form]="form.controls.representativeInformation"
     ></representative-info-form>
