Scaffold form card to visualize validation progress

--- a/src/app/form-root/form-root.component.html
+++ b/src/app/form-root/form-root.component.html
@@ -6,6 +6,9 @@
   <div class="col">
     <personal-and-contact-info-form-card></personal-and-contact-info-form-card>
   </div>
+  <div class="col">
+    <incident-and-injury-details-form-card></incident-and-injury-details-form-card>
+  </div>
 </div>
 
 <div class="row g-2 my-2">
