Scaffold treatment details form card

--- a/src/app/form-root/form-root.component.html
+++ b/src/app/form-root/form-root.component.html
@@ -9,6 +9,9 @@
   <div class="col">
     <incident-and-injury-details-form-card></incident-and-injury-details-form-card>
   </div>
+  <div class="col">
+    <treatment-details-form-card></treatment-details-form-card>
+  </div>
 </div>
 
 <div class="row g-2 my-2">
