--- a/src/app/form-root/form-root.component.html
+++ b/src/app/form-root/form-root.component.html
@@ -2,7 +2,7 @@
 @let formState = formState$ | ngrxPush;
 @let state = state$ | ngrxPush;
 
-<div class="row row-cols-1 row-cols-md-2 g-2 my-2">
+<div class="row row-cols-1 g-3 my-4">
   <div class="col">
     <personal-and-contact-info-form-card></personal-and-contact-info-form-card>
   </div>
@@ -12,9 +12,12 @@
   <div class="col">
     <treatment-details-form-card></treatment-details-form-card>
   </div>
+  <div class="col">
+    <employment-and-employer-info-form-card></employment-and-employer-info-form-card>
+  </div>
 </div>
 
-<div class="row g-2 my-2">
+<div class="row g-2 my-3">
   <div class="col-auto">
     <button
       type="button"
@@ -40,7 +43,7 @@
   </div>
 </div>
 
-<div class="row g-2 my-2">
+<div class="row g-2 my-5">
   <div class="col">
     <pre>{{ state?.debug ? (formState ?? '' | json) : form?.value | json }}</pre>
   </div>
