Use placeholder routes

--- a/src/app/form-root/form-cards/treatment-details-form-card/treatment-details-form-card.component.html
+++ b/src/app/form-root/form-cards/treatment-details-form-card/treatment-details-form-card.component.html
@@ -5,7 +5,7 @@
       Tell us about any medical care you've received or plan to receive for your injury.
     </p>
     <a
-      routerLink="personal-and-contact-info"
+      routerLink="treatment-details"
       class="btn btn-primary stretched-link"
       >{{ (isInProgress$ | ngrxPush) ? 'Continue' : 'Start' }}</a
     >
