--- a/src/app/form-root/form-cards/personal-and-contact-info-form-card/personal-and-contact-info-form-card.component.html
+++ b/src/app/form-root/form-cards/personal-and-contact-info-form-card/personal-and-contact-info-form-card.component.html
@@ -1,14 +1,32 @@
-<div class="card">
-  <div class="card-body">
-    <h4 class="card-title">Personal and contact information</h4>
-    <p class="card-text">Tell us about yourself and how you'd like us to communicate with you.</p>
+<div class="rounded-lg border border-gray-200 bg-white p-6 shadow-sm">
+  <h5 class="mb-2 text-xl font-bold tracking-tight text-gray-900">About you</h5>
+  <p class="mb-3 font-normal text-gray-700">
+    Tell us about you and your preferred way of communication.
+  </p>
+  <div class="flex justify-between">
     <a
       routerLink="personal-and-contact-info"
-      class="btn btn-primary stretched-link"
-      >{{ (isInProgress$ | ngrxPush) ? 'Continue' : 'Start' }}</a
+      class="inline-flex items-center rounded-lg bg-blue-700 px-3 py-2 text-center text-sm font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 focus:outline-none"
     >
-  </div>
-  <div class="card-footer text-center text-muted">
-    {{ percentComplete$ | ngrxPush | percent }} complete
+      {{ (isInProgress$ | ngrxPush) ? 'Continue' : 'Start' }}
+      <svg
+        class="ms-2 h-3.5 w-3.5 rtl:rotate-180"
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 14 10"
+      >
+        <path
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M1 5h12m0 0L9 1m4 4L9 9"
+        />
+      </svg>
+    </a>
+    <span class="rounded-sm bg-gray-100 px-3 py-2 text-xs font-medium text-gray-800"
+      >{{ percentComplete$ | ngrxPush | percent }} complete</span
+    >
   </div>
 </div>
