--- a/src/app/form-shell/form-shell.component.html
+++ b/src/app/form-shell/form-shell.component.html
@@ -22,7 +22,7 @@
             <td class="px-6 py-2">
               <button
                 type="button"
-                class="me-2 rounded-lg bg-blue-700 px-3 py-2 text-xs font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 focus:outline-none"
+                class="me-2 cursor-pointer rounded-lg bg-blue-700 px-3 py-2 text-xs font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 focus:outline-none"
                 routerLink="form/summary"
                 [hidden]="form.percentComplete < 1"
                 (click)="submit(form.id)"
@@ -30,15 +30,15 @@
                 Submit
               </button>
               <button
-                class="me-2 rounded-lg px-3 py-2 text-xs font-medium focus:ring-4"
+                class="me-2 cursor-pointer rounded-lg px-3 py-2 text-xs font-medium focus:ring-4"
+                routerLink="form"
                 [ngClass]="{ 'border-blue-700 text-blue-700 hover:bg-blue-800 hover:text-white': form.percentComplete === 1, 'bg-blue-700 text-white hover:bg-blue-800': form.percentComplete !== 1 }"
-                routerlink="form"
                 (click)="continue(form.id)"
               >
                 {{ form.percentComplete === 1 ? 'Edit' : 'Continue' }}
               </button>
               <button
-                class="rounded-lg border border-red-700 px-3 py-2 text-xs font-medium text-red-700 hover:bg-red-800 hover:text-white focus:ring-4 focus:ring-red-300 focus:outline-none"
+                class="cursor-pointer rounded-lg border border-red-500 px-3 py-2 text-xs font-medium text-red-500 hover:bg-red-600 hover:text-white focus:ring-4 focus:ring-red-300 focus:outline-none"
                 routerLink=""
                 (click)="remove(form.id)"
               >
