--- a/src/app/form-root/form-cards/employment-and-employer-info-form-card/employment-and-employer-info-form-card.component.html
+++ b/src/app/form-root/form-cards/employment-and-employer-info-form-card/employment-and-employer-info-form-card.component.html
@@ -26,7 +26,7 @@
       </svg>
     </a>
     <span class="rounded-sm bg-gray-100 px-3 py-2 text-xs font-medium text-gray-800"
-      >{{ percentComplete$ | ngrxPush | percent }} complete</span
+      >{{ remaining$ | ngrxPush }} questions remaining</span
     >
   </div>
 </div>
