--- a/src/app/form-shell/form-shell.component.html
+++ b/src/app/form-shell/form-shell.component.html
@@ -30,7 +30,7 @@
                 Submit
               </button>
               <button
-                class="me-2 cursor-pointer rounded-lg px-3 py-2 text-xs font-medium focus:ring-4"
+                class="me-2 cursor-pointer rounded-lg px-3 py-2 text-xs font-medium focus:ring-4 focus:ring-blue-300 focus:outline-none"
                 routerLink="form"
                 [ngClass]="{ 'border-blue-700 text-blue-700 hover:bg-blue-800 hover:text-white': form.percentComplete === 1, 'bg-blue-700 text-white hover:bg-blue-800': form.percentComplete !== 1 }"
                 (click)="continue(form.id)"
@@ -54,7 +54,7 @@
   }
 
   <button
-    class="cursor-pointer rounded-lg bg-blue-700 px-3 py-2 text-sm font-medium text-white hover:bg-blue-800 focus:ring-4"
+    class="cursor-pointer rounded-lg bg-blue-700 px-3 py-2 text-sm font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 focus:outline-none"
     routerLink="form"
     (click)="start()"
   >
