--- a/src/app/form-root/form-root.component.html
+++ b/src/app/form-root/form-root.component.html
@@ -1,68 +1,75 @@
-@let form = form$ | ngrxPush;
 @let formState = formState$ | ngrxPush;
 @let state = state$ | ngrxPush;
 
-<div class="mx-auto w-1/2">
-  <h1 class="mb-4 text-2xl leading-none font-bold text-gray-900">Report your injury</h1>
-
-  <p>Please complete the form sections listed below. Your progress will automatically be saved.</p>
-
-  <div class="my-6 grid grid-cols-2 gap-3">
-    <personal-and-contact-info-form-card></personal-and-contact-info-form-card>
-    <incident-and-injury-details-form-card></incident-and-injury-details-form-card>
-    <treatment-details-form-card></treatment-details-form-card>
-    <employment-and-employer-info-form-card></employment-and-employer-info-form-card>
-  </div>
-
-  @if (state?.debug) {
-    <div class="flex gap-2">
-      <button
-        type="button"
-        class="rounded-lg bg-blue-700 px-3 py-2 text-sm font-medium text-white focus:ring-4 focus:ring-blue-300 focus:outline-none"
-        routerLink="summary"
-        (click)="save()"
-        [disabled]="form?.isInvalid ?? true"
-        [ngClass]="{ 'cursor-pointer hover:bg-blue-800': form?.isValid ?? false, 'cursor-not-allowed opacity-50': form?.isInvalid ?? true }"
-      >
-        Submit
-      </button>
-      <button
-        type="button"
-        class="cursor-pointer rounded-lg bg-blue-700 px-3 py-2 text-sm font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 focus:outline-none"
-        routerLink=".."
-        (click)="save()"
-      >
-        Save
-      </button>
-      <button
-        class="cursor-pointer rounded-lg border border-red-500 px-3 py-2 text-sm font-medium text-red-500 hover:bg-red-600 hover:text-white focus:ring-4 focus:ring-red-300 focus:outline-none"
-        (click)="reset()"
-      >
-        Reset
-      </button>
-    </div>
-    <div class="my-6 text-xs">
-      <pre>{{ state!.debug ? (formState ?? '' | json) : form?.value | json }}</pre>
-    </div>
+<ng-container *ngrxLet="form$ as form">
+  @if (form.value.personalAndContactInfo.representativeInformation.reportingForSelf === null) {
+    <app-who-are-you-form></app-who-are-you-form>
   } @else {
-    <div class="flex gap-2">
-      <button
-        type="button"
-        class="cursor-pointer rounded-lg border border-blue-700 px-3 py-2 text-sm font-medium text-blue-700 hover:bg-blue-800 hover:text-white focus:ring-4 focus:ring-blue-300 focus:outline-none"
-        routerLink=".."
-        (click)="save()"
-      >
-        Back
-      </button>
-      <button
-        type="button"
-        class="cursor-pointer rounded-lg bg-blue-700 px-3 py-2 text-sm font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 focus:outline-none"
-        routerLink="summary"
-        [disabled]="form?.isInvalid ?? true"
-        [ngClass]="{ 'cursor-pointer hover:bg-blue-800': form?.isValid ?? false, 'cursor-not-allowed opacity-50': form?.isInvalid ?? true }"
-      >
-        Proceed to review
-      </button>
+    <div class="mx-auto w-1/2">
+      <h1 class="mb-4 text-2xl leading-none font-bold text-gray-900">Report your injury</h1>
+
+      <p>
+        Please complete the form sections listed below. Your progress will automatically be saved.
+      </p>
+
+      <div class="my-6 grid grid-cols-2 gap-3">
+        <personal-and-contact-info-form-card></personal-and-contact-info-form-card>
+        <incident-and-injury-details-form-card></incident-and-injury-details-form-card>
+        <treatment-details-form-card></treatment-details-form-card>
+        <employment-and-employer-info-form-card></employment-and-employer-info-form-card>
+      </div>
+
+      @if (state?.debug) {
+        <div class="flex gap-2">
+          <button
+            type="button"
+            class="rounded-lg bg-blue-700 px-3 py-2 text-sm font-medium text-white focus:ring-4 focus:ring-blue-300 focus:outline-none"
+            routerLink="summary"
+            (click)="save()"
+            [disabled]="form?.isInvalid ?? true"
+            [ngClass]="{ 'cursor-pointer hover:bg-blue-800': form?.isValid ?? false, 'cursor-not-allowed opacity-50': form?.isInvalid ?? true }"
+          >
+            Submit
+          </button>
+          <button
+            type="button"
+            class="cursor-pointer rounded-lg bg-blue-700 px-3 py-2 text-sm font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 focus:outline-none"
+            routerLink=".."
+            (click)="save()"
+          >
+            Save
+          </button>
+          <button
+            class="cursor-pointer rounded-lg border border-red-500 px-3 py-2 text-sm font-medium text-red-500 hover:bg-red-600 hover:text-white focus:ring-4 focus:ring-red-300 focus:outline-none"
+            (click)="reset()"
+          >
+            Reset
+          </button>
+        </div>
+        <div class="my-6 text-xs">
+          <pre>{{ state!.debug ? (formState ?? '' | json) : form?.value | json }}</pre>
+        </div>
+      } @else {
+        <div class="flex gap-2">
+          <button
+            type="button"
+            class="cursor-pointer rounded-lg border border-blue-700 px-3 py-2 text-sm font-medium text-blue-700 hover:bg-blue-800 hover:text-white focus:ring-4 focus:ring-blue-300 focus:outline-none"
+            routerLink=".."
+            (click)="save()"
+          >
+            Back
+          </button>
+          <button
+            type="button"
+            class="cursor-pointer rounded-lg bg-blue-700 px-3 py-2 text-sm font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 focus:outline-none"
+            routerLink="summary"
+            [disabled]="form?.isInvalid ?? true"
+            [ngClass]="{ 'cursor-pointer hover:bg-blue-800': form?.isValid ?? false, 'cursor-not-allowed opacity-50': form?.isInvalid ?? true }"
+          >
+            Proceed to review
+          </button>
+        </div>
+      }
     </div>
   }
-</div>
+</ng-container>
